--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.juaracoding.apitest</groupId>
-  <artifactId>SimraAPITest</artifactId>
+  <artifactId>TugasAkhirKelomopok3</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>SimraAPITest</name>
+  <name>TugasAkhirKelomopok3</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
